# guppie

./: README.md  package-lock.json  package.json  pyproject.toml  td-bulma.scss
guppie/: __init__.py  main.py
guppie/assets/styles/: guppie.css  milligram.css  td-bulma.css  td-bulma.css.map
guppie/templates/: feature.html  form.html  index.html
