[tool.poetry]
name = "guppie"
version = "0.1.0"
description = "Grouped User Priorities for Product Improvement and Enhancement"
authors = ["Mehran Moghtadai <mehran@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
pydantic = "^2.6.4"
sqlmodel = "^0.0.16"
pymssql = "^2.2.11"
pyodbc = "^5.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
